# windy-aria

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  release-cli.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs  mapping.rs  render.rs  trace.rs
docs/: MAPPING.md
scripts/: test-generator.mjs  verify-songs.mjs
src/: App.css  App.tsx  index.css  types.ts
src/audio/: engine.ts  mapping.ts  synth.ts
src/examples/: add.wnd  anthem.wnd  gust.wnd  main.wnd  puzzle.wnd  split.wnd  stars.wnd  storm.wnd  wind_speed.wnd  winds.wnd
src/export/: wav.ts
src/generator/: random.ts
src/interpreter/: windy.ts
src/share/: url.ts
src/songs/: bounce.wnd  dance.wnd  gust.wnd  index.ts  main.wnd  river.wnd  stair.wnd  storm-echo.wnd  winds.wnd
src/visualizer/: Grid.tsx  colors.ts
